--- a/documents/references.bib
+++ b/documents/references.bib
@@ -163,6 +163,32 @@
   note = {Accessed: 2016-03-15},
 }
 
+@techreport{kolasinski1995,
+  title={Simulator Sickness in Virtual Environments.},
+  author={Kolasinski, Eugenia M},
+  year={1995},
+  institution={DTIC Document}
+}
+
+@misc{oculusbest,
+  title = {{Oculus Best Practices: Tracking}},
+  year = 2016,
+  howpublished = {\url{https://developer.oculus.com/documentation/intro-vr/latest/concepts/bp_app_tracking/}},
+  note = {Accessed: 2015-12-07},
+}
+
+@article{stuelpnagel1964,
+  title={On the parametrization of the three-dimensional rotation group},
+  author={Stuelpnagel, John},
+  journal={SIAM review},
+  volume={6},
+  number={4},
+  pages={422--430},
+  year={1964},
+  publisher={SIAM}
+}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Application-specific - 3D Interaction
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
